# qt-syllogism

./: CMakeLists.txt  Makefile  README.md  main.cpp
Syllogism/: Comparison.hpp  Context.cpp  Context.hpp  Equivalence.hpp  Meme.hpp
